projects/vb6parse/snapshots/parsers/cst/library/datetime/date_statement/date_at_module_level.snap
---
source: projects/vb6parse/tests/library/datetime/date_statement.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DateStatement
      children:
        - kind: DateKeyword
          text: Date
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: LiteralExpression
          children:
            - kind: DateLiteral
              text: "#1/1/2024#"
    - kind: Newline
      text: "\n"
